Fix some error in html.

--- a/html/api.html
+++ b/html/api.html
@@ -684,11 +684,11 @@ added fuzzyness for marker computation
 	has these attributes:</p>
 <ul class="request">
 	<li><div class="tabcol0">url</div>
-		<div class="tabcol1">&nbsp;=&nbsp;&lt;string&gt</div>//
+		<div class="tabcol1">&nbsp;=&nbsp;&lt;string&gt;</div>//
 		the public url of the data source. This URL will be used to load the
 		content.</li>
 	<li><div class="tabcol0">screen_name</div>
-		<div class="tabcol1">&nbsp;=&nbsp;&lt;string&gt</div>//
+		<div class="tabcol1">&nbsp;=&nbsp;&lt;string&gt;</div>//
 		importer screen name</li>
 </ul>
 
