Fix errors in html

--- a/html/api.html
+++ b/html/api.html
@@ -1209,7 +1209,7 @@ loklak_messages under the name image0.png</p>
 </ul>
 <p>Thread dump can be used to track the memory use of loklak, and it helps developers to discover potential problems like memory leaks. There are six states that has been assigned to a thread, see further reading: <a href="https://docs.oracle.com/javase/7/docs/api/java/lang/Thread.State.html">Enum Thread.State</a></p>
 <p>At the end of the thread dump is a list of running thread. This list may indicate the load of the server.</p>
-<p>Here is some example of <a href="http://localhost:9000/api/threaddump.txt.">threaddump.txt</a>(The following example has been delibrately cutted to fit in the document):</p>
+<p>Here is some example of <a href="http://localhost:9000/api/threaddump.txt.">threaddump.txt</a>(The following example has been delibrately cut to fit in the document):</p>
 <pre>
 	************* Start Thread Dump Thu Dec 31 07:51:47 CET 2015 *******************
 
