Shifted angular modules to common folder

--- a/html/apps/tweetfeed/index.html
+++ b/html/apps/tweetfeed/index.html
@@ -154,15 +154,15 @@
       </div>
       
       <!-- Angular deps, ngMaterial, ngMessages, localStorage, angulargrid, imgfallback -->
-      <script src="js/angular.min.js"></script>
-      <script src="js/angular-sanitize.min.js"></script>
-      <script src="js/angular-aria.min.js"></script>
-      <script src="js/angular-animate.min.js"></script>
-      <script src="js/angular-material.min.js"></script>
-      <script src="js/ngStorage.min.js"></script>
-      <script src="js/angular-messages.min.js"></script>
-      <script src='js/angulargrid.min.js'></script>
-      <script src="js/angular.dcb-img-fallback.min.js"></script>
+      <script src="../../js/angular-modules/angular.min.js"></script>
+      <script src="../../js/angular-modules/angular-sanitize.min.js"></script>
+      <script src="../../js/angular-modules/angular-aria.min.js"></script>
+      <script src="../../js/angular-modules/angular-animate.min.js"></script>
+      <script src="../../js/angular-modules/angular-material.min.js"></script>
+      <script src="../../js/angular-modules/ngStorage.min.js"></script>
+      <script src="../../js/angular-modules/angular-messages.min.js"></script>
+      <script src='../../js/angular-modules/angulargrid.min.js'></script>
+      <script src="../../js/angular-modules/angular.dcb-img-fallback.min.js"></script>
       
       <script src="app.js"></script>
 
