--- a/html/apps/applist/index.html
+++ b/html/apps/applist/index.html
@@ -50,10 +50,13 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <div id="navSidebar">
+          <div><li><h4>Categories</h4></li></div>
             <ul class="nav nav-sidebar">
-                <li ng-repeat="category in categoryKeys track by $index"><a href="#{{category | nospace}}"  ng-click="categoryFilter($event)" id="{{category}}">{{category}}</a></li>
+                <li ng-repeat="category in categoryKeys track by $index"><a href="#{{category | nospace}}"  ng-click="categoryFilter($event)" id="{{category | nospace}}">{{category}}</a></li>
               </ul>
           </div>
+            <p>Read the 
+            <a href="https://github.com/loklak/loklak_server/blob/master/html/apps/apps.md">loklak app primer</a> to learn how you can contribute a loklak app!</p>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <div>
