Fixes #790 Apps page code clean up

--- a/html/apps/oneClickDeploy/index.html
+++ b/html/apps/oneClickDeploy/index.html
@@ -4,8 +4,8 @@
     <link rel="icon" type="image/png" href="../../artwork/favicon.png">
     <title>PeersDeployGame
     </title>
-    <link href="style.css" rel="stylesheet"/>
-    <link href="https://bootswatch.com/cosmo/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <script src="/js/angular.min.js">
     </script>
     <script src="/js/jquery.min.js">
@@ -183,20 +183,8 @@
           name: name}
                                     );
       }
-      // force.on('end', function() {
-      //   node.attr('r', width/85)
-      //       .attr('cx', function(d) { return d.x; })
-      //       .attr('cy', function(d) { return d.y; });
-      //   link.attr('x1', function(d) { return d.source.x; })
-      //       .attr('y1', function(d) { return d.source.y; })
-      //       .attr('x2', function(d) { return d.target.x; })
-      //       .attr('y2', function(d) { return d.target.y; });
-      // }
-      // );
-      // force.start();
     }
            );
-  </script>
   </script>
 </body>
 </html>
