--- a/html/apps/NMEA/index.html
+++ b/html/apps/NMEA/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>NMEA Visualizer</title>
-	<link rel="stylesheet" href="leaflet.css" />
-	<script src="leaflet.js"></script>
+	<link rel="stylesheet" href="css/leaflet.css" />
+	<script src="js/leaflet.js"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
 	<meta name="author" content="@sudheesh001"> <!-- CHANGE THIS -->
 	<link rel="icon" type="image/png" href="../../artwork/favicon.png">
 	<link href="../../css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
+    <script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
 	<style>
 	#map { 
