--- a/html/apps/WebScraper/index.html
+++ b/html/apps/WebScraper/index.html
@@ -4,8 +4,8 @@
    <meta charset="utf-8">
    <link rel="icon" type="image/png" href="../../artwork/favicon.png">
       <title>WebScraper</title>
-      <link href="style.css" rel="stylesheet"/>
-      <link href="https://bootswatch.com/cosmo/bootstrap.min.css" rel="stylesheet"/>
+      <link href="css/style.css" rel="stylesheet"/>
+      <link href="css/bootstrap.min.css" rel="stylesheet"/>
       <script src="/js/angular.min.js"></script>
       <link href="css/json-formatter.css" rel="stylesheet"/>
    </head>
