--- a/html/apps/knowTheDiff/aggregations.html
+++ b/html/apps/knowTheDiff/aggregations.html
@@ -5,15 +5,13 @@
     <title>AggregationResults
     </title>
     <link href="css/style.css" rel="stylesheet"/>
-    <link href="https://bootswatch.com/cosmo/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/introjs.css"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/introjs.min.css"/>
     <script src="/js/angular.min.js">
     </script>
     <script src="/js/jquery.min.js">
     </script>
-    <script src="/js/angular.min.js">
-    </script>
-    <script src="js/intro.js">
+    <script src="js/intro.min.js">
     </script>
   </head>
   <body>
