--- a/html/index.html
+++ b/html/index.html
@@ -156,8 +156,9 @@
         </div>
       </div>
 
-      <span style="padding: 1rem; text-align: center;">
+      <span style="text-align: center;">
         <p>Nice? To get latest news about <code>loklak</code>, follow <a href="https://twitter.com/0rb1t3r"><code>@0rb1t3r</code></a>.  Help to spread the news: <a class="btn btn-default" href="https://twitter.com/intent/tweet?hashtags=loklak&original_referer=http%3A%2F%2Floklak.org&text=%23anonymous%20%23twitter%20%23json%20%23rss%20%23search%20by%20@0rb1t3r&tw_p=tweetbutton&url=http%3A%2F%2Floklak.org" role="button">tweet about this &raquo;</a></p>
+        <p ng-controller="status" style="font-size: 12px">Deployment commit: <a href="https://github.com/loklak/loklak_server/tree/{{ commit.hash }}" target="_blank"><code>{{ commit.comment }}</code></a></p>
       </span>
     </div> <!-- /container -->
 
